Cards for events

--- a/index.html
+++ b/index.html
@@ -46,35 +46,59 @@
         </div>     
     </div>
 
-    <section id="events" class="d-flex">
+    <section id="events" class="align-items-center">
         <div id="event-title">
             <h3>Events</h3>
         </div>
-        <div id="event-cards">
-            <div class="card">
-                <!-- image -->
-                <h5 id="jauz-title" class="event-header">LED DAY CLUB: JAUZ PRESENTS OFF THE DEEP END</h5>
-                <p id="jauz-date" class="date">SUN 03/19</p>
-                <p id="jauz-location" class="location">HARD ROCK ROOFTOP</p>
-                <a href="https://www.showclix.com/event/led-presents-jauz-at-hard-rock-rooftop/tag/LED-site"><btn>Tickets</btn></a>
+
+        <div id="event-cards" class="row row-cols-1 row-cols-md-2 g-4">
+            <div class="col">
+                <div class="card">
+                    <img src="img" class="card-img-top"
+                        alt="LED DAY CLUB: JAUZ PRESENTS OFF THE DEEP END" />
+                    <div class="card-body">
+                        <h5 id="jauz-title" class="card-title">LED DAY CLUB: JAUZ PRESENTS OFF THE DEEP END</h5>
+                        <p id="jauz-date" class="date">SUN 03/19</p>
+                        <p id="jauz-location" class="location">HARD ROCK ROOFTOP</p>
+                        <a href="https://www.showclix.com/event/led-presents-jauz-at-hard-rock-rooftop/tag/LED-site"><btn>Tickets</btn></a>
+                    </div>
+                </div>
             </div>
-            <div class="card">
-                <h5 id="susan-title" class="event-header">LED DAY CLUB: DJ SUSAN</h5>
-                <p id="susan-date" class="date">SUN 03/26</p>
-                <p id="susan-location" class="location">HARD ROCK ROOFTOP</p>
-                <a href="https://www.showclix.com/event/led-presents-dj-susan-at-hard-rock-rooftop/tag/LED-site"><btn>Tickets</btn></a>
+
+            <div class="col">
+                <div class="card">
+                    <img src="img" class="card-img-top"
+                        alt="LED Susan" />
+                    <div class="card-body">
+                        <h5 id="susan-title" class="card-title">LED DAY CLUB: DJ SUSAN</h5>
+                        <p id="susan-date" class="date">SUN 03/26</p>
+                        <p id="susan-location" class="location">HARD ROCK ROOFTOP</p>
+                        <a href="https://www.showclix.com/event/led-presents-dj-susan-at-hard-rock-rooftop/tag/LED-site"><btn>Tickets</btn></a>
+                    </div>
+                </div>
             </div>
-            <div class="card">
-                <h5 id="john-title" class="event-header">OFF THE GRID: JOHN SUMMIT + GREEN VELVET + LF SYSTEM + RANGER TRUCCO</h5>
-                <p id="john-date" class="date">FRI 04/07</p>
-                <p id="john-location" class="location">GALLAGHER SQUARE</p>
-                <a href="https://www.showclix.com/event/led-presents-john-summit-green-velvet-petco-park-san-diego/tag/LED-site"><btn>Tickets</btn></a>
+
+            <div class="col">
+                <div class="card">
+                    <div class="card">
+                        <img src="img" class="card-img-top"
+                            alt="John Summit Green Velevt and LF System in San Diego" />
+                        <h5 id="john-title" class="card-title">OFF THE GRID: JOHN SUMMIT + GREEN VELVET + LF SYSTEM + RANGER TRUCCO</h5>
+                        <p id="john-date" class="date">FRI 04/07</p>
+                        <p id="john-location" class="location">GALLAGHER SQUARE</p>
+                        <a href="https://www.showclix.com/event/led-presents-john-summit-green-velvet-petco-park-san-diego/tag/LED-site"><btn>Tickets</btn></a>
+                    </div>
+                </div>
             </div>
+
             <div class="card">
+                <img src="img" class="card-img-top"
+                        alt="Nurko" />
                 <h5 id="nurko-title" class="event-header">LED DAY CLUB: NURKO</h5>
                 <p id="nurko-date" class="date">SUN 04/30</p>
                 <p id="nurko-location" class="location">HARD ROCK ROOFTOP</p>
                 <a href="https://www.showclix.com/event/led-presents-nurko-at-hard-rock-rooftop/tag/LED-site"><btn>Tickets</btn></a>
+            </div>
             </div>
         </div>
     </section>
@@ -92,7 +116,7 @@
         <div id="connected-title">
             <h3>Stay Connected</h3>
         </div>
-        <div>
+        <div class="input-group">
             <input type="text" id="email" name="email">
             <btn>Email Me</btn>
             <br><br>
@@ -104,11 +128,12 @@
         <div id="contact-title">
             <h3>Follow Us</h3>
             <div id="socials">
-                <i class="fa-brands fa-instagram"></i>
-                <i class="fa-brands fa-youtube"></i>
-                <i class="fa-brands fa-tiktok"></i>
-                <i class="fa-brands fa-facebook"></i>
-                <i class="fa-brands fa-soundcloud"></i>
+                <a href="https://www.instagram.com/ledpresents/"><i class="fa-brands fa-instagram"></i></a>
+                <a href="https://www.youtube.com/user/LEDpresents/videos"><i class="fa-brands fa-youtube"></i></a>
+                <!-- <a href=""><i class="fa-brands fa-tiktok"></i></a> -->
+                <a href="https://twitter.com/LEDpresents"><i class="fa-brands fa-twitter"></i></a>
+                <a href="https://www.facebook.com/LEDpresents"><i class="fa-brands fa-facebook"></i></a>
+                <a href="https://soundcloud.com/mylifeeveryday"><i class="fa-brands fa-soundcloud"></i></a>
             </div>
         </div>
     </section>
